feat: 增加数据质量服务并补齐 AI 报告与岗位模块